# from_variants

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ci.sh  publish.sh
.github/workflows/: ci.yml
examples/: generated.rs  hand_written.rs
from_variants/: CHANGELOG.md  Cargo.toml  README.md
from_variants/src/: lib.rs
from_variants_impl/: Cargo.toml
from_variants_impl/src/: errors.rs  from_impl.rs  impl_doc.md  lib.rs  parser.rs  state.rs  util.rs
src/: bindings.rs  from_impl.rs  impl_doc.md  lib.rs  parser.rs  state.rs  util.rs
tests/: e2e.rs  no_std.rs
