[package]
name = "from_variants"
version = "0.6.1"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/from_variants"
license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
description = "Rust macro to automatically generate conversions for newtype enums."
readme = "README.md"
edition = "2018"

[dependencies]
from_variants_impl = { version = "=0.6.1", path = "from_variants_impl" }

[workspace]
members = ["from_variants_impl"]
