[package]
name = "from_variants"
version = "0.2.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/from_variants"
documentation = "https://docs.rs/from_variants/0.2.0"
license = "MIT/Apache-2.0"
categories = ["development-tools", "rust-patterns"]
description = "Rust macro to automatically generate conversions for newtype enums."
readme = "README.md"

[badges]
travis-ci = { repository = "TedDriggs/from_variants" }

[dependencies]
from_variants_impl = { path = "../from_variants_impl" }