[package]
name = "from_variants_impl"
version = "1.0.2"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/from_variants"
license = "MIT/Apache-2.0"
description = "Internal helper crate for from_variants crate."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
darling = "0.14"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
pretty_assertions = "1.1"
